MyDev Project/src/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Day__c</fullName>
        <label>Appointment Day</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_slot__c</fullName>
        <label>Appointment Time slot</label>
        <picklist>
            <picklistValues>
                <fullName>7 am- 4 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm- 11 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 pm- 7 am</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Appointment__c</fullName>
        <label>Date of Appointment</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoctorApp__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PatientApp__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient_email__c</fullName>
        <label>Patient email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_emergency_contact_email_del__c</fullName>
        <label>Patient emergency contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AppId-{00000}</displayFormat>
        <label>Appointment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Appointment_Date</fullName>
        <active>true</active>
        <description>appointment must be created 4 days before Appointment_Date</description>
        <errorConditionFormula>(Date_of_Appointment__c -   TODAY()  )&lt;=4</errorConditionFormula>
        <errorMessage>Appointment must be created 4 days in advance</errorMessage>
    </validationRules>
</CustomObject>